First version from ChatGPT

--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,87 @@
 
         header {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            color: whi<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Brands Advisory — Freelance IT Consulting</title>
+  <meta name="description" content="Brands Advisory — Freelance IT Consulting by Robert Brands. Cloud adoption, solution architecture, and GenAI enablement." />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Brands Advisory — Freelance IT Consulting" />
+  <meta property="og:description" content="Cloud adoption, solution architecture, and GenAI enablement." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.brands-advisory.com/" />
+
+  <!-- Fonts (system-first + optional Inter fallback via CSS) -->
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div class="bg"></div>
+
+  <main class="wrap">
+    <header class="top">
+      <div class="mark" aria-hidden="true"></div>
+      <div class="brand">
+        <div class="name">Brands Advisory</div>
+        <div class="tagline">Freelance IT Consulting</div>
+      </div>
+    </header>
+
+    <section class="card" aria-label="Profile">
+      <h1>Robert Brands</h1>
+      <p class="lead">
+        Solution Architect with 20+ years in the Microsoft ecosystem. I help organizations modernize with
+        cloud adoption, enterprise architecture, and practical GenAI enablement.
+      </p>
+
+      <div class="pillrow" role="list" aria-label="Focus areas">
+        <span class="pill" role="listitem">Cloud Adoption (Azure)</span>
+        <span class="pill" role="listitem">Solution Architecture</span>
+        <span class="pill" role="listitem">GenAI & Copilot</span>
+      </div>
+
+      <div class="grid">
+        <div class="kv">
+          <div class="k">Location</div>
+          <div class="v">Cologne, Germany · remote across Europe</div>
+        </div>
+        <div class="kv">
+          <div class="k">Profile</div>
+          <div class="v"><a href="https://robert-brands.com/Blog/Artikel/freelancer/en" rel="me">robert-brands.com</a></div>
+        </div>
+      </div>
+
+      <hr class="sep" />
+
+      <nav class="links" aria-label="Links">
+        <a class="btn" href="mailto:mail@robert-brands.com">Email</a>
+        <a class="btn" href="https://www.linkedin.com/in/robertbrands" target="_blank" rel="noreferrer">LinkedIn</a>
+        <a class="btn" href="https://github.com/brands-advisory" target="_blank" rel="noreferrer">GitHub Org</a>
+      </nav>
+
+      <p class="fine">
+        Prefer a quick intro call? Email me a couple of time slots and your context.
+      </p>
+    </section>
+
+    <footer class="foot">
+      <span>© <span id="y"></span> Brands Advisory</span>
+      <span class="dot">·</span>
+      <a href="https://robert-brands.com/" rel="me">robert-brands.com</a>
+    </footer>
+  </main>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
+te;
             padding: 2rem 0;
             text-align: center;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
