--- a/site/index.html
+++ b/site/index.html
@@ -1,27 +1,4 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Brands Advisory - Markenberatung und Markenstrategie">
-    <title>Brands Advisory</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f8f9fa;
-        }
-
-        header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: whi<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -29,6 +6,8 @@
   <title>Brands Advisory — Freelance IT Consulting</title>
   <meta name="description" content="Brands Advisory — Freelance IT Consulting by Robert Brands. Cloud adoption, solution architecture, and GenAI enablement." />
   <meta name="robots" content="index,follow" />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/favicon.png" sizes="32x32">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Brands Advisory — Freelance IT Consulting" />
@@ -45,11 +24,38 @@
 
   <main class="wrap">
     <header class="top">
-      <div class="mark" aria-hidden="true"></div>
-      <div class="brand">
+    <div class="mark" aria-hidden="true">
+        <!-- BA Monogram -->
+        <svg width="48" height="48" viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg">
+        <defs>
+            <linearGradient id="baGrad" x1="0" y1="0" x2="1" y2="1">
+            <stop offset="0%" stop-color="#5DA2E6"/>
+            <stop offset="100%" stop-color="#2B6CB0"/>
+            </linearGradient>
+        </defs>
+
+        <rect x="1.5" y="1.5" width="45" height="45" rx="14"
+                fill="url(#baGrad)"
+                stroke="rgba(255,255,255,0.35)"
+                stroke-width="1"/>
+
+        <g fill="#FFFFFF"
+            font-family="system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial"
+            font-weight="800"
+            font-size="22"
+            text-anchor="middle"
+            dominant-baseline="middle">
+            <text x="17" y="25">B</text>
+            <text x="31" y="25">A</text>
+        </g>
+        </svg>
+    </div>
+
+    <div class="brand">
         <div class="name">Brands Advisory</div>
         <div class="tagline">Freelance IT Consulting</div>
-      </div>
+    </div>
     </header>
 
     <section class="card" aria-label="Profile">
@@ -72,7 +78,7 @@
         </div>
         <div class="kv">
           <div class="k">Profile</div>
-          <div class="v"><a href="https://robert-brands.com/Blog/Artikel/freelancer/en" rel="me">robert-brands.com</a></div>
+          <div class="v"><a href="https://robert-brands.com/Blog/Artikel/freelancer" rel="me">robert-brands.com</a></div>
         </div>
       </div>
 
@@ -82,6 +88,7 @@
         <a class="btn" href="mailto:mail@robert-brands.com">Email</a>
         <a class="btn" href="https://www.linkedin.com/in/robertbrands" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="btn" href="https://github.com/brands-advisory" target="_blank" rel="noreferrer">GitHub Org</a>
+        <a class="btn" href="https://github.com/rbrands" target="_blank" rel="noreferrer">GitHub</a>
       </nav>
 
       <p class="fine">
@@ -99,140 +106,5 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
-</body>
-</html>
-te;
-            padding: 2rem 0;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        header h1 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 0.5rem;
-        }
-
-        header p {
-            font-size: 1.2rem;
-            opacity: 0.95;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem 1rem;
-        }
-
-        main {
-            background: white;
-            padding: 3rem 2rem;
-            margin-top: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 15px rgba(0,0,0,0.08);
-        }
-
-        section {
-            margin-bottom: 2rem;
-        }
-
-        section h2 {
-            color: #667eea;
-            font-size: 1.8rem;
-            margin-bottom: 1rem;
-            border-bottom: 2px solid #667eea;
-            padding-bottom: 0.5rem;
-        }
-
-        section p {
-            margin-bottom: 1rem;
-            font-size: 1.1rem;
-            color: #555;
-        }
-
-        footer {
-            text-align: center;
-            padding: 2rem 1rem;
-            margin-top: 2rem;
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        a {
-            color: #667eea;
-            text-decoration: none;
-        }
-
-        a:hover,
-        a:focus {
-            text-decoration: underline;
-            outline: 2px solid #667eea;
-            outline-offset: 2px;
-        }
-
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2rem;
-            }
-
-            header p {
-                font-size: 1rem;
-            }
-
-            main {
-                padding: 2rem 1rem;
-            }
-
-            section h2 {
-                font-size: 1.5rem;
-            }
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Brands Advisory</h1>
-        <p>Ihre Experten für Markenberatung und Markenstrategie</p>
-    </header>
-
-    <div class="container">
-        <main>
-            <section>
-                <h2>Willkommen</h2>
-                <p>
-                    Willkommen bei Brands Advisory. Wir sind Ihr Partner für professionelle 
-                    Markenberatung und strategische Markenentwicklung.
-                </p>
-            </section>
-
-            <section>
-                <h2>Unsere Leistungen</h2>
-                <p>
-                    Wir unterstützen Sie bei der Entwicklung und Pflege Ihrer Marke mit 
-                    umfassenden Beratungsleistungen.
-                </p>
-            </section>
-
-            <section>
-                <h2>Kontakt</h2>
-                <p>
-                    Für weitere Informationen besuchen Sie uns auf 
-                    <a href="https://www.brands-advisory.com">www.brands-advisory.com</a>
-                </p>
-            </section>
-        </main>
-    </div>
-
-    <footer>
-        <p>&copy; <span id="year"></span> Brands Advisory. Alle Rechte vorbehalten.</p>
-    </footer>
-
-    <script>
-        // Set current year in footer
-        const yearElement = document.getElementById('year');
-        if (yearElement) {
-            yearElement.textContent = new Date().getFullYear();
-        }
-    </script>
 </body>
 </html>
