--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="Brands Advisory — Freelance IT Consulting by Robert Brands. Cloud adoption, solution architecture, and GenAI enablement." />
   <meta name="robots" content="index,follow" />
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="/favicon.png" sizes="32x32">
+  <link rel="icon" href="/favicon-32.png" sizes="32x32">
+  <link rel="icon" href="/favicon-16.png" sizes="16x16">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Brands Advisory — Freelance IT Consulting" />
