Link to legal added

--- a/site/index.html
+++ b/site/index.html
@@ -98,10 +98,13 @@
     </section>
 
     <footer class="foot">
-      <span>© <span id="y"></span> Brands Advisory</span>
-      <span class="dot">·</span>
-      <a href="https://robert-brands.com/" rel="me">robert-brands.com</a>
+    <span>© <span id="year"></span> Brands Advisory</span>
+    <span class="dot">·</span>
+    <a href="https://robert-brands.com/">robert-brands.com</a>
+    <span class="dot">·</span>
+    <a href="/legal.html">Legal</a>
     </footer>
+
   </main>
 
   <script>
