--- a/site/index.html
+++ b/site/index.html
@@ -107,8 +107,9 @@
 
   </main>
 
-  <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
-  </script>
-</body>
+ <script>
+  const y = document.getElementById("year");
+  if (y) y.textContent = new Date().getFullYear();
+</script>
+/body>
 </html>
