--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,9 @@
   <meta property="og:description" content="Cloud adoption, solution architecture, and GenAI enablement." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.brands-advisory.com/" />
+  <meta property="og:image" content="https://www.brands-advisory.com/og-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
 
   <!-- Fonts (system-first + optional Inter fallback via CSS) -->
   <link rel="stylesheet" href="styles.css" />
